# snf

./: .gitignore  AUTHORS  INSTALL  INSTALL.md  ISSUES  Makefile  Makefile.am  Makefile.old  README  README.md  bootstrap  build_deps  classifier_test.cpp  clean  click_element.cpp  click_element.hpp  click_tree.cpp  click_tree.hpp  configure.ac  element_type.hpp  file.cpp  file.hpp  filter.cpp  filter.hpp  headerFields.hpp  header_fields.hpp  helpers.cpp  helpers.hpp  ip_filter_parser.cpp  ip_filter_parser.hpp  libtool  logger.hpp  main.cpp  operation.cpp  operation.hpp  output_class.cpp  output_class.hpp  output_port.cpp  output_port.hpp  parser.cpp  (+8 more)
click/: click.patch  click_parse_configuration.cpp  click_parse_configuration.hpp  parse_configuration.cpp  parse_configuration.hpp
configuration/: chameleon.cpp  chameleon.hpp  file.h  file.hpp  generic_configuration.cpp  generic_configuration.hpp  graph.cpp  graph.hpp  input_properties.hpp  parser_configuration.cpp  parser_configuration.hpp  parser_properties.hpp  propertyFile  property_file  test_graph.cpp  vertex.cpp  vertex.hpp
configuration/unused/: file.h  file.hpp
doc/: Makefile.am
graph/: graph.cpp  graph.hpp  nf_graph.cpp  nf_graph.hpp  test_graph.cpp  vertex.cpp  vertex.hpp
input/: dpdk_property_file  property_file  test_property_file
input/tests/: tests.prop
logger/: logger.hpp
m4/: hypernf.m4  snf.m4
nf_repo/: broken.click  firewall.click  firewall_2if.click  flat_fw_2if.click  flat_fw_3if.click  flat_lb_2if.click  flat_lb_3if.click  flat_napt_2if.click  flat_napt_3if.click  flat_router.click  flat_router_2if.click  flat_router_3if.click  fw_2if.click  loadbalancer_3if.click  napt.click  napt_2if.click  router.click  router_2if.click  router_3if.click
nf_repo/class/: class_test_1.click  class_test_128_end.click  class_test_128_first.click  class_test_128_middle.click  class_test_16_end.click  class_test_16_first.click  class_test_16_middle.click  class_test_1_first.click  class_test_1_middle.click  class_test_2.click  class_test_2_end.click  class_test_2_first.click  class_test_2_middle.click  class_test_32_end.click  class_test_32_first.click  class_test_32_middle.click  class_test_4_end.click  class_test_4_first.click  class_test_4_middle.click  class_test_64.click  class_test_64_end.click  class_test_64_first.click  class_test_64_middle.click  class_test_8.click  class_test_8_end.click  class_test_8_first.click  class_test_8_middle.click  new_class_test_128_end.click  new_class_test_128_first.click  new_class_test_128_middle.click  new_class_test_16_end.click  new_class_test_16_first.click  new_class_test_16_middle.click  new_class_test_1_first.click  new_class_test_1_middle.click  new_class_test_256_end.click  (+17 more)
parser/: chain_parser.cpp  chain_parser.hpp  nf_graph.cpp  nf_graph.hpp
patch/: click-snf.patch
patches/: click-snf.patch  fastclick-snf.patch
scripts/: bootstrap.sh  build_dependencies.sh  clean.sh  commons.sh  install.sh  profile.sh  remove.sh  run.sh  uninstall.sh  valgrind.sh
shared/: helpers.cpp  helpers.hpp
src/: Makefile.am  hyper-nf.cpp  snf.cpp
src/.deps/: hyper-nf.Po  main.Po
src/click/: Makefile.am  click-hyper-nf-v1.patch  click-hyper-nf-v2.patch  click-hyper-nf-v3.patch  click-hyper-nf-v4.patch  click-snf-v0.patch  click-snf-v1.patch  click-snf-v2.patch  click-snf-v3.patch  click-snf-v4.patch  click_parse_configuration.cpp  click_parse_configuration.hpp  click_parser.cpp  click_parser.hpp
src/click/.deps/: libclickparser_a-click_parse_configuration.Po
src/configuration/: Makefile.am  chameleon.cpp  chameleon.hpp  generic_config.cpp  generic_config.hpp  generic_configuration.cpp  generic_configuration.hpp  parser_config.cpp  parser_config.hpp  parser_configuration.cpp  parser_configuration.hpp  properties.hpp  stv9bbBF
src/configuration/.deps/: libchameleon_a-chameleon.Po  libconf_a-parser_configuration.Po  libgenconf_a-generic_configuration.Po
src/generator/: Makefile.am  flow_director_generator.cpp  flow_director_generator.hpp  generator.cpp  generator.hpp  openflow_generator.cpp  openflow_generator.hpp  rss_generator.cpp  rss_generator.hpp  soft_generator.cpp  soft_generator.hpp
src/graph/: Makefile.am  graph.cpp  graph.hpp  nf_graph.cpp  nf_graph.hpp  vertex.cpp  vertex.hpp
src/graph/.deps/: libgraph_a-graph.Po  libnfgraph_a-nf_graph.Po  libvertex_a-vertex.Po
src/logger/: logger.hpp
src/parser/: Makefile.am  chain_parser.cpp  chain_parser.hpp
src/parser/.deps/: libchainparser_a-chain_parser.Po
src/shared/: Makefile.am  helpers.cpp  helpers.hpp
src/shared/.deps/: libhelpers_a-helpers.Po
src/synthesizer/: Makefile.am  stateful_synthesizer.cpp  stateful_synthesizer.hpp  synth_nat.cpp  synth_nat.hpp  synthesizer.cpp  synthesizer.hpp
src/synthesizer/.deps/: libsynth_nat_a-synth_nat.Po  libsynthesizer_a-synthesizer.Po
src/traffic_class_builder/: Makefile.am  click_element.cpp  click_element.hpp  click_tree.cpp  click_tree.hpp  element_type.hpp  filter.cpp  filter.hpp  header_fields.hpp  hex_filter_parser.cpp  hex_filter_parser.hpp  ip_filter_parser.cpp  ip_filter_parser.hpp  operation.cpp  operation.hpp  output_class.cpp  output_class.hpp  segment_list.cpp  segment_list.hpp
src/traffic_class_builder/.deps/: libclickelement_a-click_element.Po  libclicktree_a-click_tree.Po  libfilter_a-filter.Po  libipfilterparser_a-ip_filter_parser.Po  libop_a-operation.Po  liboutputclass_a-output_class.Po  libseglist_a-segment_list.Po
synthesis/: synthesizer.cpp  synthesizer.hpp
synthesizer/: synth_nat.cpp  synth_nat.hpp  synthesizer.cpp  synthesizer.hpp
tests/: .gitignore  Makefile.am  classifier_test.cpp
tests/benchmarks/classifier_kernel/: .gitignore  Makefile.am  classifier_kernel_test.cpp
tests/filter/: .gitignore  Makefile.am  filter_test.cpp
tests/output_class/: .gitignore  Makefile.am  output_class_test.cpp
traffic_class_builder/: click_element.cpp  click_tree.cpp  click_tree.hpp  element_type.hpp  filter.cpp  filter.hpp  header_fields.hpp  ip_filter_parser.cpp  operation.cpp  operation.hpp  output_class.cpp  segment_list.cpp
(+262 files in other folders)
