# 1 library comprises this folder
noinst_LIBRARIES = libhelpers.a

#####################################################################################
# Library with generic helper functions used by most of the other modules
libhelpers_a_SOURCES  = helpers.cpp \
			helpers.hpp
#####################################################################################
